# diploma_faceswap

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  checkpoints.dvc  essay.sty  library.bib  main.tex  pyproject.toml  requirements.txt
.dvc/: config
application/: application.tex
benchmark/: README.md  benchmarking.py  download_Control-Guided_IG_weights.sh  download_Multi-Concept_IC_weights.sh  download_Subject-Driven_IG_weights.sh  fetch_museum.sh
benchmark/benchmark_cfg/: ih_control-guided.yml  ih_mask-guided.yml  ih_multi-concept.yml  ih_sub-edit.yml  ih_sub-gen.yml  ih_t2i.yml  ih_text-guided.yml
benchmark/env_cfg/: blip_environment.yml  imagen_environment.yml
benchmark/examples/: run_multi_models.py  run_one_metric.py
code/: source.txt
inference/: inference.py  inference.yaml  inferencers.py
inference/inferencers/DiffFace/: LICENSE.txt  main.py  make_compatible.ipynb  requirements.txt
inference/inferencers/DiffSwap/: README.md  pipeline.py  requirements.txt
inference/utils/: __init__.py  faceshifter.py  mtcnn.py
playground/: Class_conditioned_diffusion_model.ipynb  Diffusion_models_from_scratch.ipynb  Introduction_to_diffusers.ipynb  draft.ipynb
practice/: practice.tex  results.tex
theory/: essay.tex  experiments.tex  intro.tex  literature.tex  theory.tex  title.tex
training/: load_instance.py  run_SDXL_dreambooth_lora.sh  run_SD_dreambooth.sh  test_examples_utils.py  train_dreambooth.py  train_dreambooth_lora_sdxl.py
training/load_cfg/: instance.yaml
training/utils/: __init__.py
training/utils/dreambooth/: __init__.py  (+2 more)
(+159 files in other folders)
