[tool.poetry]
name = "diploma-faceswap"
version = "0.1.0"
description = "Diploma project on face-swapping via the generative models"
authors = ["addicted-by Aleksey Ryabykin"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
torchvision = "^0.17.1"
torch = "^2.2.1"
diffusers = "^0.26.3"
bitsandbytes = "^0.42.0"
accelerate = "^0.27.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
